# sau

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json
src/: byte_array_stream.cpp
src/include/sau/: byte_array_stream.hpp  seekable_stream.hpp  stream.hpp
tests/: byte_array_stream_test.cpp
